FIX alignement

--- a/css/style.css
+++ b/css/style.css
@@ -1434,11 +1434,11 @@ span {
   }
 
   .imageProduit {
-    width:90%;
+    width:100%;
   }
 
   .imageProduit2 {
-    width:90%;
+    width:100%;
   }
 
   .produit, .produit2 {
